# sl-experiment-wj

./: .gitignore  README.md  mesoscope_data.json  pyproject.toml  temp.py  tox.ini  water_log.json
docs/source/: api.rst  conf.py  welcome.rst
envs/: experiment_lin.yml  experiment_lin_spec.txt  sle_dev_lin.yml  sle_dev_lin_spec.txt  slms_dev_lin.yml  slms_dev_lin_spec.txt
misc/: compare_mesoframes.ipynb  metadata.json  tiff_data.py
src/: custom_interfaces.py  module_interfaces.py  wip.py
src/sl_experiment/: __init__.py  __init__.pyi  binding_classes.py  binding_classes.pyi  cli.py  cli.pyi  data_acquisition.py  data_classes.py  data_classes.pyi  data_preprocessing.py  data_preprocessing.pyi  data_processing.py  data_processing.pyi  experiment.py  experiment.pyi  google_sheet_tools.py  google_sheet_tools.pyi  gs_data_parser.py  log_cli_new.py  logs_cli.py  mesoscope_preprocessing.py  microcontrollers.py  module_interfaces.py  module_interfaces.pyi  packaging_tools.py  run.py  sheets_data.py  transfer_tools.py  transfer_tools.pyi  visualizers.py  visualizers.pyi  water_log.py  zaber_bindings.py  zaber_bindings.pyi
src/sl_experiment/ /home/cybermouse/Desktop/test/TestMice/configurations/: project_configuration.yaml
src/sl_experiment/mesoscope_vr/: __init__.py  __init__.pyi  binding_classes.py  binding_classes.pyi  data_acquisition.py  data_acquisition.pyi  data_preprocessing.py  data_preprocessing.pyi  tools.py  tools.pyi  visualizers.py  visualizers.pyi  zaber_bindings.py
src/sl_experiment/shared_components/: __init__.py  __init__.pyi  google_sheet_tools.py  google_sheet_tools.pyi  module_interfaces.py  module_interfaces.pyi  shared_tools.py  shared_tools.pyi
src/sl_mesoscope_vr/: compression_strategies.py  experiment.py  gs_data_parser.py  mesoscope_preprocessing.py  mesoscopeexperiment.py  module_interfaces.py  packaging_tools.py  sheets_data.py  transfer_tools.py  vr.py
src/sl_mesoscope_vr/tests/: test_transfer_tools.py
src/yl_experiment/: __init__.py  binding_classes.py  calibration and toggle.py  calibration_and_toggle.py  combine.py  data_processing.py  data_processing.pyi  main_experiment.py  main_experiment_2.py  main_experiment_temp.py  mc_only_experiment.py  microcontroller.py  microcontroller.pyi  microcontrollers.py  microcontrollers.pyi  reset_python_processes.py  run.py  run.pyi  run_test.py  run_test.pyi  run_test_left.py  run_test_right.py  runtime_logics.py  temp  temp.py  temp_test.py  temp_video_system.py  valve_test.py  valve_test_template.py  visualizers.py  wip
tests/: test_transfer_tools.py
